--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,14 +2,20 @@ services:
   db:
     image: agnohq/pgvector:16
     container_name: pgvector-db
-    environment:
-      POSTGRES_DB: ai
-      POSTGRES_USER: ai
-      POSTGRES_PASSWORD: ai
+    env_file:                                     # way-1: Ei approach e geleo hobe 
+      - .env
+    # environment:                                # way-2: Ei approach e geleo hobe
+    #   POSTGRES_USER: ${POSTGRES_USER}
+    #   POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+    #   POSTGRES_DB: ${POSTGRES_DB}
+    #   POSTGRES_HOST: ${POSTGRES_HOST}
+    #   POSTGRES_PORT: ${POSTGRES_PORT}
+
     ports:
       - "5433:5432"
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ai -d ai"]
+      # test: ["CMD-SHELL", "pg_isready -U ai -d ai"]
+      test: ["CMD-SHELL", "pg_isready -U $POSTGRES_USER -d $POSTGRES_DB"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -17,8 +23,61 @@ services:
   api:
     build: .
     container_name: fastapi-app
+    env_file:
+      - .env                                        # 🔥 Joto gula service totogula .env dite hobe karon ekta container er .env onno container e payna 
     ports:
       - "8000:8000"
     depends_on:
       db:
         condition: service_healthy
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+# # If ollama is install in docker PC then docker compose file shouldbe like this
+
+# services:
+#   db:
+#     image: agnohq/pgvector:16
+#     container_name: pgvector-db
+#     environment:
+#       POSTGRES_DB: ai
+#       POSTGRES_USER: ai
+#       POSTGRES_PASSWORD: ai
+#     ports:
+#       - "5433:5432"
+
+#   ollama:
+#     image: ollama/ollama
+#     container_name: ollama
+#     ports:
+#       - "11434:11434"
+#     volumes:
+#       - ollama_data:/root/.ollama
+#     restart: unless-stopped
+
+#   api:
+#     build: .
+#     container_name: fastapi-app
+#     ports:
+#       - "8000:8000"
+#     depends_on:
+#       - db
+#       - ollama
+
+# volumes:
+#   ollama_data:
+
